--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@iconscout/react-unicons": "^2.0.2",
+    "@mui/material": "^5.15.21",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +18,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-slider": "^2.0.6",
+    "react-spring": "^9.7.3",
+    "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^10.3.1",
     "web-vitals": "^2.1.4"
   },
